重构风险提醒页面完成